Version 10A - Fix nav alignment

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -275,6 +275,7 @@ footer img {
     outline-offset: -4px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .toggle {
